[package]
name = "probe_peripheral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spider_client = { git = "https://github.com/Ocelmot/spider" }
tokio = { version = "1", features = ["full", "tracing"] }
serde_json = "1.0.73"

rppal = "0.14.1"